--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{color: white;
      margin-bottom: 2px;
      
 ;}
-
+Guilherme Fidelis 2C 21.08.2024
 
      header{border-bottom: solid 0px rgb(42, 122, 228);
      padding: 30px;
